# stereo-rectify

./: CMakeLists.txt  README.md  calib.cpp  calib.h  cam.cpp  cam.h  extr.cpp  extr.h  main.qml  misc.cpp  misc.h  point3d.cpp  point3d.h  stereo-rectify.cpp  stereo-sort.cpp  stereomanager.cpp  stereomanager.h  tests.cpp
